fixed too large image

--- a/flaskr/static/styles.css
+++ b/flaskr/static/styles.css
@@ -6,3 +6,7 @@ body {
 	font-style: normal;
 }
 
+img {
+	object-fit: scale-down;
+	width: 100%;
+}
